--- a/style.css
+++ b/style.css
@@ -885,6 +885,9 @@ button {
   .main-header-line h1 {
     font-size: 14px;
   }
+  .model{
+    position: fixed;
+  }
 }
 @media screen and (max-width: 650px) {
   .chart-row.three {
@@ -1003,7 +1006,90 @@ button {
   background-color: #36306569;
 }
 
+.modal {
+  position: absolute;
+  background-color: #000000;
+  z-index: 1000;
+  background: #1a033f;
+  border: 1px solid #5c0b5c;
+  padding: 5px 0;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  display: none;
+}
 
+.modal .modal-content {
+  padding: 10px;
+  margin: 10px;
+  background-color: #5c0b5c;
+  border-radius: 5px;
+  display: flex;
+  max-width: 550px;
+  min-width: 350px;
+  flex-direction: column;
+}
+
+.modal .modal-content .close-con{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.modal .modal-content .close-con span:hover{
+  color: rgb(252, 0, 0);
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal .modal-content .close-con span{
+color: #fff;
+font-size: 26px;
+float: right;
+}
+
+.modal .modal-content .close-con h3{
+  color: #ffffff;
+  font-size: 14px;
+  font-style: normal;
+  margin-right: 90px;
+}
+
+* #messageHolder{
+  color: rgb(255, 0, 0);
+  font-size: 14px;
+  box-sizing: border-box;
+  margin-top: 20px;
+
+}
+
+.modal .modal-content input{
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  outline: none;
+  font-size: 14px;
+  color: #fff;
+  background: #151719;
+  outline: none;
+}
+
+.modal .modal-content button{
+width: 50%;
+margin-right: 20px;
+position: relative;
+}
+
+.modal .modal-content .modal-btn{
+margin-top: 20px;
+position: relative;
+display: flex;
+justify-content: space-between;
+align-items: center;
+border-radius: 5px;
+}
 
 
 
@@ -1082,3 +1168,33 @@ button {
       white-space: normal;
       overflow: visible;
   }
+
+/* dialog box styling */
+  .dialog {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.dialog-content {
+    text-align: center;
+}
+
+.dialog button {
+    margin: 10px;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.dialog button:focus {
+    outline: none;
+}
