--- a/images/iSharee_files/style.css
+++ b/images/iSharee_files/style.css
@@ -551,10 +551,11 @@ button {
 }
 
 .profile-photo-wrapper {
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
   overflow: hidden;
   border-radius: 50%;
+  margin-bottom: 16px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -569,6 +570,7 @@ button {
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin-bottom: 16px;
   justify-content: center;
 }
 
