--- a/style.css
+++ b/style.css
@@ -768,6 +768,7 @@ button:active {
 	color: var(--main-color);
 	height: 42px;
 	padding: 0 8px 0 32px;
+	padding-left: 10px;
 	font-size: 14px;
 	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%233481d2' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-search'%3E%3Ccircle cx='11' cy='11' r='8'/%3E%3Cline x1='21' y1='21' x2='16.65' y2='16.65'/%3E%3C/svg%3E");
 	background-position: center left 10px;
