--- a/styles.css
+++ b/styles.css
@@ -350,3 +350,14 @@ f#search-form:valid #i41 {
     font-size: 14px;
 }
 
+.share-context-menu-container{
+	position: absolute;
+    background-color: #05074c;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgb(6, 249, 201);
+    z-index: 1000;
+    padding: 10px;
+	width: 350px;
+	height: 300px;
+}
