--- a/styles.css
+++ b/styles.css
@@ -354,17 +354,19 @@ f#search-form:valid #i41 {
 
 .share-context-menu-container {
     position: fixed;
-    background-color: #ffffff;
+    background-color: #05074c;
     border: 1px solid #ccc;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     padding: 10px;
     z-index: 9999; /* Ensure it's above other elements */
+	color: #ffffff;
 }
 
 .share-context-menu-header {
     margin-top: 0;
     margin-bottom: 10px;
     font-size: 16px;
+	color: #ffffff;
 }
 
 .context-menu-button {
@@ -403,7 +405,7 @@ f#search-form:valid #i41 {
 
 /* Style the Share button */
 .shareButton {
-    background-color: #007bff;
+    background-color: #183049;
     color: #ffffff;
     border: none;
     border-radius: 5px;
@@ -416,6 +418,6 @@ f#search-form:valid #i41 {
 .messageHolder {
     display: block;
     margin-top: 10px;
-    color: #333;
+    color: #fffdfd;
     font-size: 14px;
 }
