--- a/styles.css
+++ b/styles.css
@@ -356,7 +356,7 @@ f#search-form:valid #i41 {
 /* Container for the entire context menu */
 .share-context-menu-container {
     position: absolute;
-    background-color: 05074c;
+    background-color: #05074c;
     border: 1px solid #ccc;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(147, 3, 3, 0.616);
@@ -370,6 +370,7 @@ f#search-form:valid #i41 {
     justify-content: space-between;
     align-items: center;
     margin-bottom: 10px;
+	
 }
 
 /* Header styling */
@@ -377,11 +378,13 @@ f#search-form:valid #i41 {
     font-size: 16px;
     font-weight: bold;
     margin: 0;
-    color: #333;
+    color: #ffffff;
 }
 
 /* Close button styling */
 .context-menu-button {
+	width: 20px;
+	height: 20px;
     background: none;
     border: none;
     cursor: pointer;
@@ -401,11 +404,12 @@ f#search-form:valid #i41 {
     margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
+	outline: none;
 }
 
 /* Share button styling */
 .shareButton {
-    background-color: #007bff;
+    background-color: #050662;
     color: white;
     border: none;
     padding: 8px 12px;
@@ -419,7 +423,7 @@ f#search-form:valid #i41 {
 }
 
 .shareButton:hover {
-    background-color: #0056b3;
+    background-color: #0e097ab1;
 }
 
 .shareButton .icon {
