--- a/style.css
+++ b/style.css
@@ -777,7 +777,7 @@ button:active {
 	transition: 0.2s;
 	width: 100%;
 	max-width: 250px;
-	/* margin-left: 16px; */
+	margin-left: 7px;
 }
 
 .main-header-line input:placeholder {
