--- a/styles.css
+++ b/styles.css
@@ -458,6 +458,7 @@ line-height: 1;
     font-weight: bold;
 	width: 100%;
 	height: 32px;
+	color: #02ffbb;
 	justify-content: center;
 	align-items: center;
 	background: #4359d1c5;
