--- a/styles.css
+++ b/styles.css
@@ -465,3 +465,12 @@ line-height: 1;
 	z-index: 99999;
 }
 
+.msgContainer{
+	color: #ffffff;
+	width: 100%;
+	height: 32px;
+	justify-content: center;
+	align-items: center;
+	background: #1f2546c5;
+	z-index: 99999;
+}
