--- a/styles.css
+++ b/styles.css
@@ -31,8 +31,16 @@ body {
 }
 
 .image img {
-	height: 100px;
-	object-fit: cover;
+	height: auto;
+	object-fit: contain;
+	max-width: 100%;
+	cursor: pointer;
+}
+
+.fullscreen-img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
 .file-name {
