--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,13 @@ body {
 }
 
 .image-container-box {
-	max-width: 250px;
-	display: grid;
-	justify-items: center;
-	background: #010415;
-	border-radius: 5px;
-	transition: 1s ease;
+    max-width: 250px;
+    display: grid;
+    justify-items: center;
+    background: #010415;
+    border-radius: 5px;
+    transition: 1s ease;
+    overflow: hidden;
 }
 
 .image-container-box:hover {
@@ -19,22 +20,19 @@ body {
 }
 
 .image {
-	margin: 10px;
-	object-fit: cover;
-	max-width: 250px;
-	max-height: 250px;
-	overflow: hidden;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    max-width: 250px;
 }
 
 .image img {
-	height: auto;
-	object-fit: contain;
-	max-width: 100%;
-	cursor: pointer;
+    object-fit: contain;
+    max-width: 100%;
+    max-height: 250px;
+    cursor: pointer;
 }
 
 .fullscreen-img {
@@ -43,11 +41,17 @@ body {
     object-fit: contain;
 }
 
+
 .file-name {
-	text-align: center;
-	margin-top: 15px;
-	font-size: 14px;
-	color: #333;
+    text-align: center;
+    margin-top: 5px;
+    font-size: 14px;
+    color: #f3f2f2;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 5px;
+    width: 100%;
+    box-sizing: border-box; 
+    border-radius: 0 0 5px 5px;
 }
 
 .file-name:hover {
