--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body {
 
 .image-container-box {
 	max-width: 250px;
+	max-height: 150px;
 	display: grid;
 	justify-items: center;
 	background: #010415;
@@ -37,6 +38,17 @@ body {
 	cursor: pointer;
 }
 
+.image-name {
+    width: 100%;
+    /* margin: 10px auto; */
+    padding: 5px;
+    /* background: aliceblue; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: sticky;
+}
+
 @media screen and (max-width: 370px) {
 	.photosfileList{
 		display: flex;
@@ -49,7 +61,7 @@ body {
         max-width: 200px;
     }
 .image-container-box:hover{
-	transform: scale(0.8);
+	transform: scale(1.1);
 }
 }
 .fullscreen-img {
