--- a/styles.css
+++ b/styles.css
@@ -39,39 +39,64 @@ body {
 }
 
 .image-name {
-    width: 100%;
-    padding: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: sticky;
+	width: 100%;
+	padding: 5px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: sticky;
 }
 
-@media screen and (max-width: 400px) {
-	#photosfileList{
+@media screen and (max-width: 376px) {
+	#fileList,
+	#audiofileList,
+	#videofileList,
+	#photosfileList {
 		display: flex;
 		align-items: center;
 		justify-content: center;
 		justify-items: center;
 	}
 
-.image-container-box:hover{
-	transform: scale(1.0);
+	.image-container-box:hover {
+		transform: scale(1);
+	}
+
+	.file-name {
+		font-size: 10px;
+		color: #dfd6d6;
+		text-align: center;
+		margin-top: 15px;
+	}
 }
 
-.file-name{
-	font-size: 10px;
-	color: #dfd6d6;
-	text-align: center;
-	margin-top: 15px;
-}
-}
+@media screen and (max-width: 400px) {
+	#fileList,
+	#audiofileList,
+	#videofileList,
+	#photosfileList {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		justify-items: center;
+	}
 
+	.image-container-box:hover {
+		transform: scale(1);
+	}
+
+	.file-name {
+		font-size: 10px;
+		color: #dfd6d6;
+		text-align: center;
+		margin-top: 15px;
+	}
+}
 
 .fullscreen-img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
+	width: 100%;
+	height: 100%;
+	object-fit: contain;
 }
 
 .file-name {
@@ -297,8 +322,6 @@ body {
 	margin-top: 20px;
 }
 
-
-
 #i41 {
 	position: absolute;
 	top: 0;
@@ -346,87 +369,82 @@ f#search-form:valid #i41 {
 	color: rgb(255, 0, 0);
 }
 
-
-
 #search-form:valid a {
 	display: block;
 }
 
-
 /* Style for the context menu container */
 .context-menu-container {
-position: absolute;
-background-color: #05074c;
-border: 1px solid #ccc;
-border-radius: 5px;
-box-shadow: 0 2px 5px rgb(6, 249, 201);
-z-index: 1000;
-padding: 10px;
-color: #f1eeee;
-width: 150px;
-height: 150px;
-display: flex;
-flex-direction: column;
-gap: 20px;
-text-align: left;
-justify-content: center;
-align-content: center;
+	position: absolute;
+	background-color: #05074c;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	box-shadow: 0 2px 5px rgb(6, 249, 201);
+	z-index: 1000;
+	padding: 10px;
+	color: #f1eeee;
+	width: 150px;
+	height: 150px;
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	text-align: left;
+	justify-content: center;
+	align-content: center;
 }
 
 /* Style for the context menu buttons */
 .context-menu-button {
-    display: flex;
-    align-items: center;
-    background-color: transparent;
-    border: none;
-    padding: 5px;
-    width: 100%;
-    text-align: left;
-    cursor: pointer;
-
+	display: flex;
+	align-items: center;
+	background-color: transparent;
+	border: none;
+	padding: 5px;
+	width: 100%;
+	text-align: left;
+	cursor: pointer;
 }
 
 .context-menu-button .icon {
-    margin-right: 8px;
+	margin-right: 8px;
 }
 
 .context-menu-button:hover {
-    background-color: #05074cb9;
+	background-color: #05074cb9;
 	color: #00ff59;
 }
 
 .context-menu-button .fas {
-    font-size: 14px;
+	font-size: 14px;
 }
 
 /* ################################## */
 
 /* Container for the entire context menu */
 .share-context-menu-container {
-    position: absolute;
-    background-color: #05074c;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(147, 3, 3, 0.616);
-    padding: 15px;
-    z-index: 1000;
+	position: absolute;
+	background-color: #05074c;
+	border: 1px solid #ccc;
+	border-radius: 8px;
+	box-shadow: 0 2px 10px rgba(147, 3, 3, 0.616);
+	padding: 15px;
+	z-index: 1000;
 }
 
 /* Container for the header and close button */
 .header-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 36px;
-	
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-bottom: 36px;
 }
 
 /* Header styling */
 .share-context-menu-header {
-    font-size: 16px;
-    font-weight: bold;
-    margin: 0;
-    color: #ffffff;
+	font-size: 16px;
+	font-weight: bold;
+	margin: 0;
+	color: #ffffff;
 	padding-right: 32px;
 }
 
@@ -434,63 +452,63 @@ align-content: center;
 .context-menu-button {
 	width: 20px;
 	height: 20px;
-    background: none;
+	background: none;
 	padding-left: 20px;
 	float: right;
 	right: 0px;
-    border: none;
-    cursor: pointer;
-    font-size: 16px;
-    color: #ffffff;
-    transition: color 0.3s;
+	border: none;
+	cursor: pointer;
+	font-size: 16px;
+	color: #ffffff;
+	transition: color 0.3s;
 }
 
 .context-menu-button:hover {
-    color: #c10e0e;
+	color: #c10e0e;
 }
 
 /* Input field styling */
 .context-menu-input {
-width: 100%;
-padding: 8px;
-margin-bottom: 10px;
-border: 1px solid #060a44;
-border-radius: 4px;
-outline: none;
-background: #4244a6a1;
-color: #fff;
-font-size: 16px;
-line-height: 1;
+	width: 100%;
+	padding: 8px;
+	margin-bottom: 10px;
+	border: 1px solid #060a44;
+	border-radius: 4px;
+	outline: none;
+	background: #4244a6a1;
+	color: #fff;
+	font-size: 16px;
+	line-height: 1;
 }
 
-.context-menu-input:focus{
+.context-menu-input:focus {
 	outline: #02ffbb;
 }
 
 /* Share button styling */
 .shareButton {
-    background-color: #050662;
-    color: white;
-    border: none;
-    padding: 8px 12px;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 14px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: background-color 0.3s;
+	background-color: #050662;
+	color: white;
+	border: none;
+	padding: 8px 12px;
+	border-radius: 4px;
+	cursor: pointer;
+	font-size: 14px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	transition: background-color 0.3s;
 }
 
 .shareButton:hover {
-    background-color: #0e097ab1;
+	background-color: #0e097ab1;
 }
 
 .shareButton .icon {
-    margin-right: 5px;
+	margin-right: 5px;
 }
 
-.msgContainer{
+.msgContainer {
 	color: #ffffff;
 	width: 100%;
 	height: 32px;
