--- a/styles.css
+++ b/styles.css
@@ -116,7 +116,7 @@ body {
 }
 
 .video-container-box:hover {
-	transform: scale(1.25);
+	transform: scale(1.12);
 	box-shadow: 0 0 10px rgba(73, 173, 239, 0.748);
 }
 
@@ -156,6 +156,7 @@ body {
 
 .video-container-box video::-webkit-media-controls-enclosure:hover {
 	display: block;
+	color: white;
 }
 
 .audio-container-box {
@@ -168,7 +169,7 @@ body {
 }
 
 .audio-container-box:hover {
-	transform: scale(1.25);
+	transform: scale(1.12);
 	box-shadow: 0 0 10px rgba(73, 173, 239, 0.748);
 }
 
@@ -225,7 +226,7 @@ body {
 }
 
 .doc-container-box:hover {
-	transform: scale(1.25);
+	transform: scale(1.12);
 	box-shadow: 0 0 10px rgba(73, 173, 239, 0.748);
 }
 
@@ -271,7 +272,7 @@ body {
 }
 
 .files-container-box:hover {
-	transform: scale(1.25);
+	transform: scale(1.12);
 	box-shadow: 0 0 10px rgba(73, 173, 239, 0.748);
 }
 
