--- a/styles.css
+++ b/styles.css
@@ -517,9 +517,11 @@ f#search-form:valid #i41 {
 	z-index: 99999;
 }
 
-.file-checkbox{
-	color: red !important;
-	width: 20px;
-	height: 20px;
+.file-checkbox {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    z-index: 1;
 	background-color: #00ff59;
+	color: #02ffbb;
 }
