--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 
 .image-container-box {
 	max-width: 250px;
-	max-height: 150px;
+	max-height: 180px;
 	display: grid;
 	justify-items: center;
 	background: #010415;
@@ -82,7 +82,8 @@ body {
 		font-size: 10px;
 		color: #dfd6d6;
 		text-align: center;
-		margin-top: 15px;
+		margin-top: 10px;
+		user-select: none;
 	}
 }
 
@@ -94,8 +95,8 @@ body {
 
 .file-name {
 	text-align: center;
-	margin-top: 15px;
-	font-size: 14px;
+	margin-top: 10px;
+	font-size: 12px;
 	color: #dfd6d6;
 	user-select: none;
 }
