--- a/styles.css
+++ b/styles.css
@@ -521,21 +521,21 @@ f#search-form:valid #i41 {
 
 #photoSlider {
     width: 100%;
-    height: 100%;
+    height: 350px;
     position: relative;
     overflow: hidden;
+    padding: 15px;
 }
-
 .image-slider-box {
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
-    left: 0;
+    left: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: opacity 1s ease-in-out;
+    transition: transform 1s ease-in-out;
 }
 
 .image-container {
@@ -550,4 +550,12 @@ f#search-form:valid #i41 {
     max-width: 100%;
     max-height: 100%;
     border-radius: 10px;
+}
+
+.image-slider-box.slide-in {
+    transform: translateX(-100%);
+}
+
+.image-slider-box.slide-out {
+    transform: translateX(-100%);
 }
