--- a/styles.css
+++ b/styles.css
@@ -376,8 +376,7 @@ f#search-form:valid #i41 {
 	z-index: 1000;
 	padding: 10px;
 	color: #f1eeee;
-	width: 150px;
-	height: 150px;
+	max-width: 160px;
 	display: flex;
 	flex-direction: column;
 	gap: 20px;
@@ -386,17 +385,6 @@ f#search-form:valid #i41 {
 	align-content: center;
 }
 
-/* Style for the context menu buttons */
-.context-menu-button {
-	display: flex;
-	align-items: center;
-	background-color: transparent;
-	border: none;
-	padding: 5px;
-	width: 100%;
-	text-align: left;
-	cursor: pointer;
-}
 
 .context-menu-button .icon {
 	margin-right: 8px;
@@ -446,7 +434,6 @@ f#search-form:valid #i41 {
 	width: 20px;
 	height: 20px;
 	background: none;
-	padding-left: 20px;
 	float: right;
 	right: 0px;
 	border: none;
@@ -476,6 +463,25 @@ f#search-form:valid #i41 {
 
 .context-menu-input:focus {
 	outline: #02ffbb;
+}
+.context-menu-container .context-menu-button:first-child{
+	color: aqua;
+}
+.context-menu-container .context-menu-button:nth-child(2){
+	color: rgb(255, 42, 0);
+}
+.context-menu-container .context-menu-button:nth-child(3){
+	color: rgb(0, 102, 255);
+}
+.context-menu-container .context-menu-button:nth-child(4){
+	color: rgb(89, 104, 125);
+}
+.context-menu-container .context-menu-button:last-child {
+    background-color: #06ea78;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
 }
 
 /* Share button styling */
