--- a/styles.css
+++ b/styles.css
@@ -376,7 +376,7 @@ f#search-form:valid #i41 {
 	z-index: 1000;
 	padding: 10px;
 	color: #f1eeee;
-	max-width: 160px;
+	width: 200px;
 	display: flex;
 	flex-direction: column;
 	gap: 20px;
@@ -464,20 +464,9 @@ f#search-form:valid #i41 {
 .context-menu-input:focus {
 	outline: #02ffbb;
 }
-.context-menu-container .context-menu-button:first-child{
-	color: aqua;
-}
-.context-menu-container .context-menu-button:nth-child(2){
-	color: rgb(255, 42, 0);
-}
-.context-menu-container .context-menu-button:nth-child(3){
-	color: rgb(0, 102, 255);
-}
-.context-menu-container .context-menu-button:nth-child(4){
-	color: rgb(89, 104, 125);
-}
+
 .context-menu-container .context-menu-button:last-child {
-    background-color: #06ea78;
+    background-color: #ea0606;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
